<resources>
    <string name="app_name">Scanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_products">Products Management</string>
    <string name="action_createproduct">Create Product</string>
    <string name="action_modifyproduct">Modify Product</string>
    <string name="action_deleteproduct">Delete Product</string>
    <string name="action_inventory">Inventory Management</string>
    <string name="action_increasequantity">Increase Quantity</string>
    <string name="action_decreasequantity">Decrease Quantity</string>
    <string name="action_reports">Reports Management</string>
    <string name="action_users">User Management</string>
    <string name="action_deleteuser">Delete User</string>
    <string name="action_registeruser">Register User</string>
    <string name="action_productlist">Product Lists Report</string>
    <string name="action_costanalysis">Cost Analysis Report</string>

    <string name="scan">Scan</string>
    <string name="title_activity_scan">Scan</string>
    <string name="title_activity_manager_screen">Manager</string>
    <string name="title_activity_normal_user_screen">Normal User</string>
    <string name="title_activity_register_user_screen">Register User</string>
    <string name="title_activity_add_remove_quantity_screen">Add and Remove Product Quantity</string>
    <string name="title_activity_create_product_screen">Create Product</string>
    <string name="title_activity_modify_product_screen">Modify Product</string>
    <string name="title_activity_delete_product_screen">Delete Product</string>
    <string name="title_activity_cost_analysis_screen">Cost Analysis</string>
    <string name="title_activity_admin_landing">Administrator Landing Page</string>
    <string name="title_activity_change_password_screen">Change Password</string>
    <string name="title_activity_delete_user_screen">Delete User</string>
    <string name="title_activity_increase_quantity_screen">Increase Quantity Screen</string>
    <string name="title_activity_decrease_quantity_screen">Decrease Quantity Screen</string>
    <string name="title_activity_search_user_screen">Search Users Screen</string>
</resources>
